# sbsrf-update

./: Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: rust.yml
src/: cli.rs  config.rs  device.rs  error.rs  fcitx5.rs  hamster.rs  im.rs  macos.rs  main.rs  release.rs  squirrel.rs  utils.rs  weasel.rs
