# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sbsrf-update"
version = "0.1.0"
edition = "2021"
authors = ["Hotleave <hotleave@gmail.com>"]
description = "声笔输入法更新程序"
license = "MIT OR Apache-2.0"
publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4.5.4", features = ["env", "unicode", "derive"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
dialoguer = "0.11.0"
indicatif = "0.17.8"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
zip = "0.6.6"
