# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sbsrf-update"
version = "0.3.4"
edition = "2021"
authors = ["Hotleave <hotleave@gmail.com>"]
description = "声笔输入法更新程序，支持安装、更新、备份及还原，支持 iOS 设备"
license = "MIT OR Apache-2.0"
publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4.5", features = ["env", "unicode", "derive", "cargo"] }
console = { version = "0.15", features = ["windows-console-colors"] }
dialoguer = "0.11"
indicatif = "0.17"
rayon = "1.10"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
zip = "1.1"
